# Intelligence-Studio

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
backend/: .env.example  pyproject.toml  server.py
backend/app/: config.py  main.py
backend/app/models/: agent.py  ai.py  azure.py  common.py  proxy.py  query.py
backend/app/routers/: agent.py  ai.py  azure_auth.py  azure_resources.py  custom_agents.py  health.py  notebooks.py  proxy.py  query.py  tools.py
backend/app/services/: agent_system.py  ai_helper.py  azure_auth.py  azure_management.py  databricks_client.py  pricing.py  query_store.py  script_executor.py  tools_service.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_agent.py  test_ai.py  test_proxy.py
cli/: pyproject.toml
cli/cli/: main.py
desktop/: main.js  package-lock.json  package.json  preload.js
docs/: API_REFERENCE.md  BACKEND_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  FRONTEND_ARCHITECTURE.md  README.md  SIGNING.md  medium-article-short.md  medium-article.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/agent/: AgentChat.tsx  CustomAgentBuilder.tsx
frontend/src/components/ai/: AiAssistant.tsx  AnalyzeResponseTab.tsx  ApiDocsTab.tsx  CodeGenerationTab.tsx  DataQATab.tsx  ErrorAnalysisTab.tsx  FindEndpointTab.tsx  PromptManagerTab.tsx  TestDataTab.tsx  WorkflowBuilderTab.tsx
frontend/src/components/catalog/: ApiDocPanel.tsx  PresetDrawer.tsx  PresetSidebar.tsx
frontend/src/components/common/: CodeBlock.tsx  JsonEditor.tsx  NaturalLanguageInput.tsx
frontend/src/components/export/: ExportModal.tsx  IntegrationExportPanel.tsx
frontend/src/hooks/: useDependencyGraph.ts  usePagination.ts  useRequestChain.ts
frontend/src/lib/: api.ts  apiCatalog.ts  azureApi.ts  catalogExport.ts  categoryIcons.tsx  codeGenerator.ts  dataVisualization.ts  exportFormats.ts  integrationExport.ts  intelligentSearch.ts  paginationManager.ts
frontend/src/stores/: aiStore.ts  authStore.ts  catalogStore.ts  historyStore.ts  queryStore.ts  requestStore.ts  settingsStore.ts
frontend/src/types/: ai.ts  api.ts  azure.ts  catalog.ts
scripts/: build-all.ps1  build-all.sh  capture-demo.mjs  generate-catalog-exports.ts  install.ps1  install.sh  notarize.js
(+30 files in other folders)
