[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-studio"
version = "1.0.0"
description = "AI-powered API explorer for Databricks — browse, test, and analyze 500+ REST APIs"
license = {text = "MIT"}
authors = [{name = "Viral Patel"}]
keywords = ["databricks", "api-explorer", "ai-assistant", "fastapi", "rest-api"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/viral0216/Intelligence-Studio"
Repository = "https://github.com/viral0216/Intelligence-Studio"
Issues = "https://github.com/viral0216/Intelligence-Studio/issues"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "azure-identity>=1.17.0",
    "python-multipart>=0.0.9",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
